force-app/main/default/objects/Account/fields/GitHub_Test__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Test__c</fullName>
    <description>1251</description>
    <label>GitHub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>