force-app/main/default/objects/Account/fields/My_Field_2__c.field-meta.xml
<CustomField>
    <fullName>My_Field_2__c</fullName>
    <label>My Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>