force-app/main/default/objects/Account/fields/My_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Field__c</fullName>
    <label>My Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>