force-app/main/default/objects/Account/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Sasa's Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>